--- a/testinfra.yml
+++ b/testinfra.yml
@@ -1,7 +1,7 @@
 network:
   ip: 172.16.16.1
   mask: 255.255.255.0
-vms:
+nodes:
   - hostname: fregate01
     ip: 172.16.16.101
     netmask: 255.255.255.0
@@ -13,7 +13,7 @@ vms:
     network: 172.16.16.1
     box_url: http://repository.dotfile.eu/fregate-base-v1.ova
   - hostname: fregate03
-    ip: 172.16.16.102
+    ip: 172.16.16.103
     netmask: 255.255.255.0
     network: 172.16.16.1
     box_url: http://repository.dotfile.eu/fregate-base-v1.ova
