--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ tests_dev:
     - echo "Testing fregate $(cat version.txt) $(date +%F\ %D)" >> /var/log/gitci.log
     - virtualenv -p python3 venv
     - source venv/bin/activate
-    - pip3 install --user -e .
+    - pip3 install -e .
     - fregate -h
     - deactivate
     - rm -fr venv
