--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 tests_dev:
   stage: tests
   script:
-    - echo "Testing fregate $(cat version.txt) $(date +%F\ %D)" >> /var/log/gitci.log
+    - echo "$(date +%F\ %D) Testing fregate $(cat version.txt)" >> /var/log/gitci.log
     - chmod 600 .fregate.d/id_rsa
     - pip3 install --user -e .
     - fregate -h
@@ -14,3 +14,13 @@ tests_dev:
     - dev
   tags:
     - tests
+deploy_master:
+  stage: deploy
+  script:
+    - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
+    - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
+    - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
+  only:
+    - master
+  tags:
+    - deploy
