--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,13 +29,13 @@ tests_master:
     - master
   tags:
     - tests
-deploy_master:
-  stage: deploy
-  script:
-    - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
-    - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
-    - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
-  only:
-    - master
-  tags:
-    - deploy
+# deploy_master:
+#   stage: deploy
+#   script:
+#     - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
+#     - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
+#     - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
+#   only:
+#     - master
+#   tags:
+#     - deploy
