--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - tests
+  - deploy
 tests_dev:
   stage: tests
   script:
@@ -14,27 +15,27 @@ tests_dev:
     - dev
   tags:
     - tests
-# tests_master:
-#   stage: tests
-#   script:
-#     - echo "$(date +%F\ %D) Testing fregate $(cat version.txt)" >> /var/log/gitci.log
-#     - chmod 600 .fregate.d/id_rsa
-#     - pip3 install --user -e .
-#     - fregate -h
-#     - fregate -c tests/testinfra.yml up -d
-#     - fregate -c tests/testinfra.yml down
-#     - fregate -c tests/testinfra.yml clean
-#   only:
-#     - master
-#   tags:
-#     - tests
-# deploy_master:
-#   stage: deploy
-#   script:
-#     - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
-#     - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
-#     - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
-#   only:
-#     - master
-#   tags:
-#     - deploy
+tests_master:
+  stage: tests
+  script:
+    - echo "$(date +%F\ %D) Testing fregate $(cat version.txt)" >> /var/log/gitci.log
+    - chmod 600 .fregate.d/id_rsa
+    - pip3 install --user -e .
+    - fregate -h
+    - fregate -c tests/testinfra.yml up -d
+    - fregate -c tests/testinfra.yml down
+    - fregate -c tests/testinfra.yml clean
+  only:
+    - master
+  tags:
+    - tests
+deploy_master:
+  stage: deploy
+  script:
+    - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
+    - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
+    - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
+  only:
+    - master
+  tags:
+    - deploy
