--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,15 @@ tests_dev:
     - dev
   tags:
     - tests
+deploy_master:
+  stage: deploy
+  script:
+    - echo "$(date +%F\ %D) Deploying fregate-dev pip package" >> /var/log/gitci.log
+    - sudo /usr/local/scripts/push_package.sh "fregate-dev.tar.gz"
+  only:
+    - dev
+  tags:
+    - deploy
 tests_master:
   stage: tests
   script:
@@ -33,7 +42,6 @@ deploy_master:
   stage: deploy
   script:
     - echo "$(date +%F\ %D) Deploying fregate-$(cat version.txt) as pip package" >> /var/log/gitci.log
-    - tar --exclude .gitlab-ci.yml --exclude .git --exclude boxes -cvz -f "fregate-$(cat version.txt).tar.gz" .
     - sudo /usr/local/scripts/push_package.sh "fregate-$(cat version.txt).tar.gz"
   only:
     - master
