Add kubernetes follow logging

--- a/nodes.yml
+++ b/nodes.yml
@@ -1,14 +1,23 @@
 network:
   ip: 172.16.16.1
   mask: 255.255.255.0
+rke:
+  ignore_docker_version: false
+  kubernetes_version: v1.12.2
 nodes:
   - hostname: fregate-001
     ip: 172.16.16.100
     netmask: 255.255.255.0
     network: 172.16.16.1
-    box_url: http://repository.dotfile.eu/fregate-base-v1.ova
+    box_url: fregate-base-v1.ova
+    role:
+      - etcd
+      - controlplane
+      - worker
   - hostname: fregate-002
     ip: 172.16.16.101
     netmask: 255.255.255.0
     network: 172.16.16.1
-    box_url: http://repository.dotfile.eu/fregate-base-v1.ova
+    box_url: fregate-base-v1.ova
+    role:
+      - worker
