--- a/nodes.yml
+++ b/nodes.yml
@@ -9,7 +9,7 @@ nodes:
     ip: 172.16.16.100
     netmask: 255.255.255.0
     network: 172.16.16.1
-    box_url: fregate-base-v1.ova
+    box: fregate-base-v1.ova
     role:
       - etcd
       - controlplane
@@ -18,6 +18,6 @@ nodes:
     ip: 172.16.16.101
     netmask: 255.255.255.0
     network: 172.16.16.1
-    box_url: fregate-base-v1.ova
+    box: fregate-base-v1.ova
     role:
       - worker
