--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ tests_dev:
     - bash scripts/get_bin.sh
     - fregate -h
     - fregate -c tests/testinfra.yml up -d
-    - fregate -c tests/testinfra.yml services kubernete up
+    - fregate -c tests/testinfra.yml service kubernete up
     # - fregate -c tests/testinfra.yml services kubernete down
     - fregate -c tests/testinfra.yml down
     - fregate -c tests/testinfra.yml clean
