--- a/tests/5-nodes.yml
+++ b/tests/5-nodes.yml
@@ -4,6 +4,8 @@ network:
 rke:
   ignore_docker_version: false
   kubernetes_version: v1.12.2
+  system_images:
+    kubernetes: rancher/hyperkube:v1.12.3-rancher1
 nodes:
   - hostname: fregate-001
     ip: 172.16.16.100
