--- a/tests/testinfra.yml
+++ b/tests/testinfra.yml
@@ -4,6 +4,8 @@ network:
 rke:
   ignore_docker_version: false
   kubernetes_version: v1.12.2
+  system_images:
+    kubernetes: rancher/hyperkube:v1.12.3-rancher1
 nodes:
   - hostname: fregate01
     ip: 172.16.16.101
@@ -14,6 +16,8 @@ nodes:
       - etcd
       - controlplane
       - worker
+    memory: 1024
+    cpus: 1
   - hostname: fregate02
     ip: 172.16.16.102
     netmask: 255.255.255.0
@@ -21,3 +25,5 @@ nodes:
     box: fregate-base-v1.ova
     role:
       - worker
+    memory: 1024
+    cpus: 1
