--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ tests_dev:
     - fregate -h
     - fregate -c tests/testinfra.yml up -d --cached
     - fregate -c tests/testinfra.yml service kubernetes up
+    - cp /tmp/kube_config_cluster.yml .fregate.d/services/kubernetes/kube_config_cluster.yml
     - fregate kubectl get nodes
     - fregate kubectl get all --all-namespaces
-    # - fregate -c tests/testinfra.yml services kubernetes down
     - fregate -c tests/testinfra.yml down
     - fregate -c tests/testinfra.yml clean
   only:
